--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -29,14 +29,29 @@
             <hr class="hr15">
             <input name="password" lay-verify="required" id="password" placeholder="密码"  type="password" class="layui-input">
             <hr class="hr15">
-            <input name="checkbox1" value="Item 1" type="checkbox">学生
-            <input name="checkbox1" value="Item 1" type="checkbox">企业老师
-            <input name="checkbox1" value="Item 1" type="checkbox">学校老师
+            <div class="changeDiv">
+                <a>性别:</a>
+                <input id="school" type="text" list="schoollist">
+                <datalist id="schoollist">
+                    <option>徐州工程学院</option>
+                    <option>清华大学</option>
+                </datalist>
+            </div>
             <input value="登录" lay-submit lay-filter="login" id="loginbutn" style="width:100%;height: 50px;" type="button">
             <hr class="hr20" >
         </form>
     </div>
     <script>
+
+        window.onload = function () {
+
+
+
+
+        }
+
+
+
         $("#loginbutn").click(function () {
             var account = $("#account").val();
             var password = $("#password").val();
@@ -97,16 +112,6 @@
         //     });
         // })
     </script>
-    <!-- 底部结束 -->
-    <!--<script>-->
-    <!--//百度统计可去掉-->
-    <!--var _hmt = _hmt || [];-->
-    <!--(function() {-->
-      <!--var hm = document.createElement("script");-->
-      <!--hm.src = "https://hm.baidu.com/hm.js?b393d153aeb26b46e9431fabaf0f6190";-->
-      <!--var s = document.getElementsByTagName("script")[0]; -->
-      <!--s.parentNode.insertBefore(hm, s);-->
-    <!--})();-->
-    <!--</script>-->
+
 </body>
 </html>
