--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,11 +1,11 @@
-<!doctype html>
+<!--<!doctype html>-->
 <html class="x-admin-sm">
     <head>
         <meta charset="UTF-8">
         <title> 企业项目综合实训过程管理系统</title>
         <meta name="renderer" content="webkit|ie-comp|ie-stand">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <meta name="viewport" content="width=device-width,user-scalable=yes, minimum-scale=0.4, initial-scale=0.8,target-densitydpi=low-dpi" />
+        <!--<meta name="viewport" content="width=device-width,user-scalable=yes, minimum-scale=0.4, initial-scale=0.8,target-densitydpi=low-dpi" />-->
         <meta http-equiv="Cache-Control" content="no-siteapp" />
         <link rel="stylesheet" href="./css/font.css">
         <link rel="stylesheet" href="./css/xadmin.css">
@@ -101,24 +101,6 @@
                                     <i class="iconfont">&#xe6a7;</i>
                                     <cite>个人信息</cite></a>
                             </li>
-<!--                            <li>-->
-<!--                                <a href="javascript:;">-->
-<!--                                    <i class="iconfont">&#xe70b;</i>-->
-<!--                                    <cite>会员管理</cite>-->
-<!--                                    <i class="iconfont nav_right">&#xe697;</i></a>-->
-<!--                                <ul class="sub-menu">-->
-<!--                                    <li>-->
-<!--                                        <a onclick="xadmin.add_tab('会员删除','member-del.html')">-->
-<!--                                            <i class="iconfont">&#xe6a7;</i>-->
-<!--                                            <cite>会员删除</cite></a>-->
-<!--                                    </li>-->
-<!--                                    <li>-->
-<!--                                        <a onclick="xadmin.add_tab('等级管理','member-list1.html')">-->
-<!--                                            <i class="iconfont">&#xe6a7;</i>-->
-<!--                                            <cite>等级管理</cite></a>-->
-<!--                                    </li>-->
-<!--                                </ul>-->
-<!--                            </li>-->
                         </ul>
                     </li>
                     <li>
