--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -5,9 +5,7 @@
 	<title>企业项目管理</title>
 	<meta name="renderer" content="webkit|ie-comp|ie-stand">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <!--<meta name="viewport" content="width=device-width,user-scalable=yes, minimum-scale=0.4, initial-scale=0.8,target-densitydpi=low-dpi" />-->
     <meta http-equiv="Cache-Control" content="no-siteapp" />
-    <!--<meta http-equiv="Access-Control-Allow-Origin" content="*" />-->
     <link rel="stylesheet" href="./css/font.css">
     <link rel="stylesheet" href="./css/login.css">
     <link rel="stylesheet" href="./css/xadmin.css">
@@ -19,99 +17,117 @@
     <![endif]-->
 </head>
 <body class="login-bg">
-    
     <div class="login layui-anim layui-anim-up">
         <div class="message">登录</div>
         <div id="darkbannerwrap"></div>
-        
         <form method="post" class="layui-form" >
             <input name="username" placeholder="用户名" id="account"  type="text" lay-verify="required" class="layui-input" >
             <hr class="hr15">
             <input name="password" lay-verify="required" id="password" placeholder="密码"  type="password" class="layui-input">
             <hr class="hr15">
-            <div class="changeDiv">
-                <a>性别:</a>
-                <input id="school" type="text" list="schoollist">
-                <datalist id="schoollist">
-                    <option>徐州工程学院</option>
-                    <option>清华大学</option>
-                </datalist>
+            <div class="layui-form-item">
+                <div class="layui-input-block">
+                    <select id="school" name="city" lay-verify="required" style="width:339px;height: 41px;margin-left:-110px;display: block;">
+                    </select>
+                </div>
             </div>
+            <div class="layui-form-item">
+                <div class="layui-input-block">
+                    <select id="role" name="city" lay-verify="required" style="width:339px;height: 41px;margin-left:-110px;display: block;">
+                        <option id="student" value="学生">学生</option>
+                        <option id="teacher" value="教师">教师</option>
+                    </select>
+                </div>
+            </div>
+
             <input value="登录" lay-submit lay-filter="login" id="loginbutn" style="width:100%;height: 50px;" type="button">
+
             <hr class="hr20" >
         </form>
     </div>
     <script>
 
-        window.onload = function () {
-
-
-
-
-        }
-
-
-
-        $("#loginbutn").click(function () {
-            var account = $("#account").val();
-            var password = $("#password").val();
-            console.log("***********",account)
-
-            var param = {"foreignId":5,"account":account,"password":password};
-            // $.ajax({
-            //     type:"post",
-            //     url:"http://localhost:8080/practice/auth/st",
-            //     data:param,
-            //     contentType:'application/json',
-            //     crossDomain:true,
-            //     dataType:"JSON",
-            //     success:function (data) {
-            //         if (data.trim()=="OK"){
-            //             window.location.href = "index.html";
-            //         }
-            //     },error:function (data) {
-            //         console.log(data)
-            //     }
-            // })
-            // $.post("http://localhost:8080/practice/auth/st",param,function (result) {
-            //     if (result){
-            //         window.location.href="index.html";
-            //     }else {
-            //         alert("用户名不正确");
-            //     }
-            //
-            // }, "json")
-
-            fetch('http://localhost:8080/practice/auth/st', {
-              method: 'POST',
-              headers: {
-                'Content-Type': 'application/json'
-              },
-              body: JSON.stringify(param)
+        window.global = {
+            pageType: 'doc'
+            ,preview: function(){
+                var preview = document.getElementById('LAY_preview');
+                return preview ? preview.innerHTML : '';
+            }()
+        };
+        layui.config({
+            base: './lib/layui/lay/modules/layui/'
+            ,version: '1560414887305'
+        }).use('global');
+        $(function () {
+            var data={};
+            fetch('http://localhost:8080/practice/query/school', {
+                method: 'post',
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify(data)
             }).then(function (res) {
                 return res.json();
             }).then(function (json) {
+                var newres = new Object();
+                newres = json["result"];
+                for (var i=0;i<newres.length;i++){
+
+                    $("#school").append('<option id='+newres[i]["id"]+' value='+newres[i]["name"]+'>'+newres[i]["name"]+'</option>');
+                }
                 console.log(json)
             })
+        });
+        $("#loginbutn").click(function () {
+            var account = $("#account").val();
+            var password = $("#password").val();
+            var content  = $("#school").val();
+            var foreignId = $("#school option:selected").attr("id");
+            var role = $("#role option:selected").val();
+            console.log("***1111",role);
+            if (role == "学生"){
+                var param = {"foreignId":foreignId,"account":account,"password":password};
+                fetch('http://localhost:8080/practice/auth/st', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify(param)
+                }).then(function (res) {
+                    return res.json();
+                }).then(function (json) {
+                    if (json.code == 0){
+                        window.location.href="http://localhost:8080/practice/index.html";
+                    }else{
+                        alert("用户名或密码错误");
+                    }
+                    console.log(json)
+                })
+
+            } else {
+                var param = {"foreignId":foreignId,"account":account,"password":password};
+                fetch('http://localhost:8080/practice/auth/sc', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify(param)
+                }).then(function (res) {
+                    return res.json();
+                }).then(function (json) {
+                    if (json.code == 0){
+                        window.location.href="http://localhost:8080/practice/index.html";
+                    }else{
+                        alert("用户名或密码错误");
+                    }
+                    console.log(json)
+                })
+
+
+            }
+
+
         })
-
-        // $(function  () {
-        //     layui.use('form', function(){
-        //       var form = layui.form;
-        //       // layer.msg('玩命卖萌中', function(){
-        //       //   //关闭后的操作
-        //       //   });
-        //       //监听提交
-        //       form.on('submit(login)', function(data){
-        //         // alert(888)
-        //         layer.msg(JSON.stringify(data.field),function(){
-        //             location.href='index.html'
-        //         });
-        //         return false;
-        //       });
-        //     });
-        // })
     </script>
-
 </body>
 </html>
