学生、教师、企业登录完成

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -82,7 +82,7 @@
                             <i class="iconfont nav_right">&#xe697;</i></a>
                         <ul class="sub-menu">
                             <li>
-                                <a onclick="xadmin.add_tab('查看月报','welcome1.html')">
+                                <a onclick="xadmin.add_tab('查看月报','http://localhost:8080/practice/welcome1.html')">
                                     <i class="iconfont">&#xe6a7;</i>
                                     <cite>查看月报</cite></a>
                             </li>
