--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -25,20 +25,35 @@
             <hr class="hr15">
             <input name="password" lay-verify="required" id="password" placeholder="密码"  type="password" class="layui-input">
             <hr class="hr15">
+
+            <div class="layui-form-item">
+                <div class="layui-input-block">
+                    <select id="role" name="city" lay-verify="required" style="width:339px;height: 41px;margin-left:-110px;display: block;" onchange="showinfo(this[selectedIndex].value)">
+                        <option>请选择角色</option>
+                        <option id="student" value="学生">学生</option>
+                        <option id="teacher" value="教师">教师</option>
+                        <option id="enp" value="企业">企业</option>
+                    </select>
+                </div>
+            </div>
             <div class="layui-form-item">
                 <div class="layui-input-block">
                     <select id="school" name="city" lay-verify="required" style="width:339px;height: 41px;margin-left:-110px;display: block;">
                     </select>
                 </div>
             </div>
+
+
+
+
             <div class="layui-form-item">
                 <div class="layui-input-block">
-                    <select id="role" name="city" lay-verify="required" style="width:339px;height: 41px;margin-left:-110px;display: block;">
-                        <option id="student" value="学生">学生</option>
-                        <option id="teacher" value="教师">教师</option>
+                    <select id="enper" name="enper" lay-verify="required" style="width:339px;height: 41px;margin-left:-110px;display: block;">
+
                     </select>
                 </div>
             </div>
+
 
             <input value="登录" lay-submit lay-filter="login" id="loginbutn" style="width:100%;height: 50px;" type="button">
 
@@ -46,6 +61,22 @@
         </form>
     </div>
     <script>
+
+        function showinfo(values){
+            if(values == "教师" ||values == "学生" ){
+                $("#school").css("display","block")
+                $("#enper").css("display","none");
+                $("#loginbutn").css("margin-top","-50px");
+
+            }else {
+                $("#school").css("display","none")
+                $("#enper").css("display","block");
+                $("#enper").css("margin-top","-50px");
+                $("#loginbutn").css("margin-top","2px");
+
+            }
+
+        }
 
         window.global = {
             pageType: 'doc'
@@ -78,6 +109,30 @@
                 console.log(json)
             })
         });
+
+
+        $(function () {
+            var data={};
+            fetch('http://localhost:8080/practice/query/enp', {
+                method: 'post',
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify(data)
+            }).then(function (res) {
+                return res.json();
+            }).then(function (json) {
+                var newres = new Object();
+                newres = json["result"];
+                for (var i=0;i<newres.length;i++){
+
+                    $("#enper").append('<option id='+newres[i]["id"]+' value='+newres[i]["name"]+'>'+newres[i]["name"]+'</option>');
+                }
+                console.log(json)
+            })
+        });
+
+
         $("#loginbutn").click(function () {
             var account = $("#account").val();
             var password = $("#password").val();
@@ -104,7 +159,7 @@
                     console.log(json)
                 })
 
-            } else {
+            } else if (role == "教师") {
                 var param = {"foreignId":foreignId,"account":account,"password":password};
                 fetch('http://localhost:8080/practice/auth/sc', {
                     method: 'POST',
@@ -124,6 +179,24 @@
                 })
 
 
+            }else {
+                var param = {"foreignId":foreignId,"account":account,"password":password};
+                fetch('http://localhost:8080/practice/auth/enp', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify(param)
+                }).then(function (res) {
+                    return res.json();
+                }).then(function (json) {
+                    if (json.code == 0){
+                        window.location.href="http://localhost:8080/practice/index.html";
+                    }else{
+                        alert("用户名或密码错误");
+                    }
+                    console.log(json)
+                })
             }
 
 
